[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/sheet.png" type="Texture" id=1]
[ext_resource path="res://scenes/ships/BuilderShip.gd" type="Script" id=2]
[ext_resource path="res://assets/progress_full.png" type="Texture" id=3]
[ext_resource path="res://assets/progress_empty.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 13.164

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 640, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 768, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 896, 128, 128, 128 )

[sub_resource type="SpriteFrames" id=22]
animations = [ {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="BuilderShip" type="Node2D" groups=[
"builders",
"ships",
]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.158154, 0.158154 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 1152, 0, 128, 128 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="SelectionSprite" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 0.207628, 0.207628 )
frames = SubResource( 4 )
frame = 1
playing = true

[node name="Timer" type="Timer" parent="."]

[node name="Progress" type="TextureProgress" parent="."]
margin_left = -18.0
margin_top = 13.0
margin_right = 19.0
margin_bottom = 21.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 3 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="InterstellarSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 1.24171, 1.46621 )
scale = Vector2( 0.202536, 0.202536 )
frames = SubResource( 22 )
frame = 2
playing = true

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
